--- a/recipes/pavbhaji.html
+++ b/recipes/pavbhaji.html
@@ -7,5 +7,42 @@
 <body>
     <h1>Pav Bhaji</h1>
     <img src="../images/pavbhaji.png" alt="pav bhaji image">
+
+    <h2>Description</h2>
+    <p>This is a very popular recipe in India, liked by almost everyone. You may have to go to a nearby Asian Indian store to get the 'Pav Bhaji Masala' that is the special spice to bring the flavor (Masala means spice). Pav is actually the buns. Bhaji is the vegetables cooked with spice. </p>
+    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1/2 cup vegetable oil</li>
+        <li>2 teaspoons chopped garlic</li>
+        <li>1 teaspoon finely chopped green chile peppers</li>
+        <li>1 cup chopped onions</li>
+        <li>2 teaspoons grated fresh ginger</li>
+        <li>1 cup chopped plum tomatoes</li>
+        <li>2 cups cauliflower, finely chopped</li>
+        <li>1 cup chopped garbage</li>
+        <li>1 cup green peas</li>
+        <li>1 cup grated carrots</li>
+        <li>4 potatoes, boiled and mashed</li>
+        <li>3 tablespoons pav bhaji masala</li>
+        <li>salt to taste</li>
+        <li>1 tablespoon lemon juice</li>
+        <li>8 (2 inch square) dinner rolls</li>
+        <li>1/2 tablespoon butter</li>
+        <li>1/4 cup finely chopped onion</li>
+        <li>1 tablespoon finely chopped green chile peppers</li>
+        <li>1/4 cup chopped fresh cilantro</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Heat the oil in a wok over medium heat. </li>
+        <li>Saute garlic and green chile for 30 seconds, then stir in onions and ginger. Cook until onions are brown.</li>
+        <li>Add tomatoes, and cook until pasty. </li>
+        <li>Stir in cauliflower, cabbage, peas, carrots and potatoes. </li>
+        <li>Season with pav bhaji masala. Cover, and cook for 15 minutes, stirring occasionally. </li>
+        <li>Season with salt, and stir in lemon juice.</li>
+        <li>Toast the dinner rolls, and spread lightly with butter. Serve garnished with chopped onion, green chile and cilantro.</li>
+    </ol>
 </body>
 </html>
