--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pavbhaji.html">Pav Bhaji</a>
+    <ul>
+        <li><a href="recipes/pavbhaji.html">Pav Bhaji</a></li>
+        <li><a href="recipes/fruitcake.html">Quick Fruitcake</a></li>
+        <li><a href=""></a></li>
+    </ul>
+    
 </body>
 </html>
