--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li><a href="recipes/pavbhaji.html">Pav Bhaji</a></li>
         <li><a href="recipes/fruitcake.html">Quick Fruitcake</a></li>
-        <li><a href=""></a></li>
+        <li><a href="recipes/potatochips.html">Potato Chips</a></li>
     </ul>
     
 </body>
