Resized images for all recipes to 400x300

--- a/recipes/fruitcake.html
+++ b/recipes/fruitcake.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Quick Fruitcake</h1>
-    <img src="../images/fruitcake.jpeg" alt="fruitcake image" width="400">
+    <img src="../images/fruitcake.jpeg" alt="fruitcake image" width="400" height="300">
 
     <h2>Description</h2>
     <p>This fruitcake recipe is very easy to make through use of prepared mincemeat and mixed candied fruit for a quick Christmas-time classic.</p>
