--- a/recipes/potatochips.html
+++ b/recipes/potatochips.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Potato Chips</h1>
-    <img src="../images/potatochips.jpeg" alt="potatochips image" width="400">
+    <img src="../images/potatochips.jpeg" alt="potatochips image" width="400" height="300">
 
     <h2>Description</h2>
     <p>Make your own potato chips using your microwave. A tasty and easy alternative to store-bought potato chips (not to mention economical)! A mandoline would make slicing the potato into paper thin slices a breeze.</p>
