--- a/recipes/pavbhaji.html
+++ b/recipes/pavbhaji.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Pav Bhaji</h1>
-    <img src="../images/pavbhaji.png" alt="pav bhaji image" width="400">
+    <img src="../images/pavbhaji.png" alt="pav bhaji image" width="400" height="300">
 
     <h2>Description</h2>
     <p>This is a very popular recipe in India, liked by almost everyone. You may have to go to a nearby Asian Indian store to get the 'Pav Bhaji Masala' that is the special spice to bring the flavor (Masala means spice). Pav is actually the buns. Bhaji is the vegetables cooked with spice. </p>
