Added links to return to homepage and image for index.html

--- a/recipes/pavbhaji.html
+++ b/recipes/pavbhaji.html
@@ -44,5 +44,6 @@
         <li>Season with salt, and stir in lemon juice.</li>
         <li>Toast the dinner rolls, and spread lightly with butter. Serve garnished with chopped onion, green chile and cilantro.</li>
     </ol>
+    <a href="../index.html">Return to home</a>
 </body>
 </html>
