--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="images/recipes-banner.jpg" alt="recipes banner img" width="400">
     <ul>
         <li><a href="recipes/pavbhaji.html">Pav Bhaji</a></li>
         <li><a href="recipes/fruitcake.html">Quick Fruitcake</a></li>
