--- a/recipes/fruitcake.html
+++ b/recipes/fruitcake.html
@@ -29,5 +29,6 @@
         <li>In a large bowl, combine eggs, mincemeat, condensed milk, fruit, and nuts. Fold in dry ingredients. Pour into prepared pans.</li>
         <li>Bake for 2 hours, or until center springs back and top is golden brown. Cool. Turn cakes out onto wire rack; remove wax paper.</li>
     </ol>
+    <a href="../index.html">Return to home</a>
 </body>
 </html>
