--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <img src="images/recipes-banner.jpg" alt="recipes banner img" width="400">
+    <img src="images/recipes-banner.jpg" alt="recipes banner img" width="400" height="auto">
     <ul>
         <li><a href="recipes/pavbhaji.html">Pav Bhaji</a></li>
         <li><a href="recipes/fruitcake.html">Quick Fruitcake</a></li>
