--- a/recipes/pavbhaji.html
+++ b/recipes/pavbhaji.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pav Bhaji Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Pav Bhaji</h1>
