Changed 'return to home' button name to 'return to homepage'

--- a/recipes/potatochips.html
+++ b/recipes/potatochips.html
@@ -26,6 +26,6 @@
         <li>Cook in the microwave for 3 to 5 minutes, or until lightly browned (if not browned, they will not become crisp). Times will vary depending on the power of your microwave. Remove chips from plate, and toss with salt (or other seasonings). Let cool.</li>
         <li>Repeat process with the remaining potato slices. You will not need to keep oiling the plate.</li>
     </ol>
-    <a href="../index.html">Return to home</a>
+    <a href="../index.html">Return to homepage</a>
 </body>
 </html>
